--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300);
 
 body, html {
-    background-color: #34495e;
+    background-color: #262B2D;
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
@@ -13,12 +13,13 @@ body{overflow-y: auto;}
 .row {z-index:2990;}
 
 .titlebar, .titleedge {
-    background-color: #2c3e50;
+    background-color: #262B2D;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 3000;
+    border-bottom: 1px solid rgba(244, 244, 244, 0.1);
 }
 
 .titlebar {
@@ -68,10 +69,9 @@ button {
     top: 55px;
     right: 5px;
     width: 400px;
-    height: 160px;
-    background-color: #2c3e50;
-    border: 4px #293745 solid;
-    border-radius: 3px;
+    height: 150px;
+    background-color: #262B2D;
+    border: 1px rgba(244, 244, 244, 0.2) solid;
 }
 
 #blackout {
@@ -94,7 +94,7 @@ button {
         display: none;
     }
     ::-webkit-scrollbar-thumb {
-        background-color: #bdc3c7;
+        background-color: #6097C5;
         border-radius: 10px;
     }
 }
@@ -107,7 +107,7 @@ button {
     right: 0;
     width: 400px;
     height: 100vh;
-    background-color: #2c3e50;
+    background-color: #262B2D;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -133,9 +133,7 @@ button {
     font-size: 18px;
     font-weight: 300px;
     padding: 12px 20px;
-    background-color: #34495e;
-    border-top: 1px solid #2c3e50;
-    border-bottom: 1px solid #2c3e50;
+    background-color: #262B2D;
 }
 
 .chat {
@@ -180,14 +178,15 @@ button {
 }
 
 .message {
-    background-color: white;
+    color: #262B2D;
+    background-color: #F4F4F4;
     float: left;
 }
 
 .message-me {
     float: right;
-    color: white;
-    background-color: #2980b9;
+    color: #F4F4F4;
+    background-color: #1E9BCA;
 }
 
 .link {
@@ -196,27 +195,29 @@ button {
 
 .chat-input-container {
     overflow: hidden;
-    background-color: #2c3e50;
+    background-color: #262B2D;
     position: fixed;
     z-index: 2050;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 90px;
+    margin: 0;
+    height: 50px;
+    border-top: 1px solid rgba(244, 244, 244, 0.2);
 }
 
 .chat-input {
     overflow: hidden;
     width: 100%;
-    margin: 20px 5px 0 0;
+    margin: 0;
     padding: 12px 10px;
     line-height: 16px;
-    height: 50px;
-    background-color: #2c3e50;
+    height: 45px;
+    background-color: #262B2D;
     outline: none;
     color: white;
-    border-radius: 3px;
-    border: 2px solid #dadddf;
+    border: none;
+    border-bottom: 2px solid #6097C5;
 }
 
 .chat-input::selection {
@@ -229,10 +230,15 @@ button {
     width: 365px;
 }
 
+.limited-border {
+    margin: 0;
+    padding: 0 10px;
+}
+
 #submitEdit {
     border-radius: 3px;
     background-color: transparent;
-    border: 2px #18982c solid;
+    border: 2px #6097C5 solid;
     color: white;
     font-size: 1em;
     padding: 15px;
@@ -241,27 +247,22 @@ button {
     transition: background-color 0.2s;
 }
 
-#submitEdit:hover {background-color: #18982c}
+#submitEdit:hover {background-color: #6097C5}
+#submitEdit:active {background-color: #5284ad;}
 
 #submitChat {
     width: 100%;
-    height: 50px;
-    margin: 20px 5px 0 0;
+    height: 40px;
+    margin-top: 5px;
+    border: 2px solid #6097C5;
     border-radius: 3px;
-    border-width: 2px;
-    border-color: white;
-    background-color: white;
+    background-color: transparent;
     transition: 0.2s;
-    color: black;
+    color: #F4F4F4;
 }
 
-#submitChat:hover {
-    background-color: #bdc3c7;
-}
-
-#submitChat:active {
-    background-color: #95a5a6;
-}
+#submitChat:hover {background-color: #6097C5;}
+#submitChat:active {background-color: #5284ad;}
 
 @media screen and (min-width: 1500px) {
     .message, .message-me {
